--- a/drivetrekConsumerApp/src/main/res/layout/activity_login.xml
+++ b/drivetrekConsumerApp/src/main/res/layout/activity_login.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,30 +22,41 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/email"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/username_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"
             android:layout_margin="@dimen/gutterSpace"
-            android:inputType="textEmailAddress"
-            android:imeOptions="actionNext"
-            android:singleLine="true"
+            android:hint="@string/username"
             app:layout_constraintEnd_toEndOf="@+id/imageLogo"
             app:layout_constraintStart_toStartOf="@+id/imageLogo"
-            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
+            app:layout_constraintTop_toBottomOf="@+id/imageLogo">
 
-        <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:maxLines="1" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
-            android:hint="Password"
             android:layout_margin="@dimen/gutterSpace"
-            android:inputType="textPassword"
-            android:imeOptions="actionDone"
-            app:layout_constraintEnd_toEndOf="@+id/email"
-            app:layout_constraintStart_toStartOf="@+id/email"
-            app:layout_constraintTop_toBottomOf="@+id/email"/>
+            android:hint="@string/password"
+            app:errorEnabled="true"
+            app:passwordToggleEnabled="true"
+            app:layout_constraintEnd_toEndOf="@+id/username_text_input"
+            app:layout_constraintStart_toStartOf="@+id/username_text_input"
+            app:layout_constraintTop_toBottomOf="@+id/username_text_input">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/txtforgotpwd"
@@ -54,28 +64,29 @@
             android:layout_height="wrap_content"
             android:textAlignment="textEnd"
             android:gravity="end"
-            android:layout_marginTop="@dimen/gutterSpaceHalf"
             android:layout_marginEnd="@dimen/gutterSpace"
             android:layout_marginStart="@dimen/gutterSpace"
             android:textColor="@color/colorPrimary"
             android:clickable="true"
             android:focusable="true"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text="Forgot Password?"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="@+id/btnlogin"
-            app:layout_constraintTop_toBottomOf="@+id/password" />
+            android:paddingBottom="@dimen/gutterSpaceQuarter"
+            android:paddingTop="@dimen/gutterSpaceHalf"
+            android:text="@string/forgot_password"
+            android:textSize="@dimen/login_text"
+            app:layout_constraintEnd_toEndOf="@+id/button_register"
+            app:layout_constraintTop_toBottomOf="@+id/password_text_input" />
 
-        <Button
-            android:id="@+id/btnlogin"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
             android:layout_margin="@dimen/gutterSpace"
+            android:text="@string/login"
             app:layout_constraintEnd_toEndOf="@+id/txtforgotpwd"
             app:layout_constraintStart_toStartOf="@+id/txtforgotpwd"
-            app:layout_constraintTop_toBottomOf="@+id/txtforgotpwd" />
+            app:layout_constraintTop_toBottomOf="@+id/txtforgotpwd"/>
+
+
 
         <LinearLayout
             android:id="@+id/layOr"
@@ -86,8 +97,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            app:layout_constraintStart_toStartOf="@+id/btnlogin"
-            app:layout_constraintTop_toBottomOf="@+id/btnlogin" >
+            app:layout_constraintStart_toStartOf="@+id/button_login"
+            app:layout_constraintTop_toBottomOf="@+id/button_login" >
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -100,7 +111,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginStart="5dp"
                 android:layout_weight="0.1"
-                android:text="or"/>
+                android:text="@string/or"/>
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
@@ -109,12 +120,13 @@
                 android:background="@color/colorPrimary"/>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/txtviewsignup"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_register"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Create Account"
             android:layout_margin="@dimen/gutterSpace"
+            android:text="@string/create_account"
             app:layout_constraintStart_toStartOf="@+id/layOr"
             app:layout_constraintTop_toBottomOf="@+id/layOr" />
 
@@ -124,13 +136,13 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_marginTop="@dimen/gutterSpaceDouble"
-            android:clickable="true"
-            android:focusable="true"
+            android:layout_marginStart="@dimen/gutterSpace"
+            android:layout_marginEnd="@dimen/gutterSpace"
             android:textColor="@color/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@+id/txtviewsignup"
+            app:layout_constraintTop_toBottomOf="@+id/button_register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="@string/app_version" />
+            android:text="@string/app_version" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
