--- a/drivetrekConsumerApp/src/main/res/values/colors.xml
+++ b/drivetrekConsumerApp/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="drivetrek_colorPrimary">#165A96</color>
+    <color name="drivetrek_colorPrimaryDark">#275c9d</color>
+    <color name="drivetrek_colorAccent">#28ABFF</color>
 </resources>
