--- a/shared/src/main/res/values/styles.xml
+++ b/shared/src/main/res/values/styles.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme.AlternativeButton" parent="Widget.AppCompat.Button.Borderless.Colored">
-        <item name="elevation">@dimen/elevation_button</item>
-        <item name="android:textColor">@color/alternative_button_text_color</item>
-        <item name="android:padding">@dimen/gutterSpace</item>
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textStyle">bold</item>
-    </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dtk_app_bar_height</item>
@@ -44,11 +37,6 @@
         <item name="dtk_barWidth">@dimen/dtk_bar_graph_vertical_bar_width</item>
         <item name="dtk_maxBarLength">@dimen/dtk_bar_graph_vertical_bar_max_height</item>
         <item name="dtk_barWhiteSpace">@dimen/gutterSpaceHalf</item>
-    </style>
-    <style name="AppTheme.ButtonStyle" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:textColor">@color/primary_button_text_color</item>
-        <item name="android:padding">@dimen/gutterSpace</item>
-        <item name="android:textAllCaps">false</item>
     </style>
     <style name="AppTheme.CalendarStyle" parent="dtk_AppTheme">
         <item name="dtk_minCalendarWidth">@dimen/dtk_calendar_min_width</item>
@@ -111,12 +99,6 @@
         <item name="android:textAllCaps">false</item>
     </style>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-    <style name="AppTheme.RaisedButtonStyle" parent="Widget.AppCompat.Button.Colored">
-        <item name="backgroundTint">@color/raised_button_color</item>
-        <item name="android:textColor">@color/raised_button_text_color</item>
-        <item name="android:padding">@dimen/gutterSpace</item>
-        <item name="android:textAllCaps">false</item>
-    </style>
     <style name="AppTheme.RecyclerView" parent="dtk_AppTheme">
         <item name="android:layout_marginTop">@dimen/dtk_list_normal_top_bottom_extra_margin</item>
         <item name="android:layout_marginBottom">@dimen/dtk_list_normal_top_bottom_extra_margin</item>
@@ -144,7 +126,7 @@
         <item name="dtk_ticksPerPeriod">7</item>
         <item name="dtk_soundBarColour">?attr/colorAccent</item>
     </style>
-    <style name="dtk_AppTheme" parent="Theme.MaterialComponents.Light.Bridge">
+    <style name="dtk_AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:fontFamily">@font/opensans</item>
         <item name="fontFamily">@font/opensans</item>
 
@@ -167,11 +149,6 @@
         <item name="android:alertDialogTheme">@style/AppTheme.Dialog</item>
         <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
         <item name="android:editTextStyle">@style/AppTheme.EditTextStyle</item>
-        <item name="android:buttonStyle">@style/AppTheme.ButtonStyle</item>
-        <item name="buttonStyle">@style/AppTheme.ButtonStyle</item>
-        <item name="android:borderlessButtonStyle">@style/AppTheme.AlternativeButton</item>
-        <item name="borderlessButtonStyle">@style/AppTheme.AlternativeButton</item>
-        <item name="outlineButtonStyle">@style/AppTheme.OutlineButton</item>
         <!-- Bar graph styling -->
         <item name="barGraphStyleHorizontal">@style/AppTheme.BarGraphStyleHorizontal</item>
         <item name="barGraphStyleVertical">@style/AppTheme.BarGraphStyleVertical</item>
